# simple-rtsp-server

./: .gitignore  CMakeLists.txt  CMakeLists_Linux.txt  CMakeLists_Windows.txt  Makefile  README.md  README_CN.md  aac_rtp.c  aac_rtp.h  common.c  common.h  h264_rtp.c  h264_rtp.h  h265_rtp.c  h265_rtp.h  media.c  media.h  pcma_rtp.c  rtsp_server.c  session.c  session.h
example/: rtsp_server_file.c  rtsp_server_live.c  rtsp_server_live_av.c  rtsp_server_live_device.c
example/device/: device_audio.c  device_audio.h  device_video.c  device_video.h
mp4path/: test.aac  test.h264  test_h264_pcma.mkv
rtp/: aac_rtp.c  h264_rtp.c  h264_rtp.h  h265_rtp.c  h265_rtp.h
src/: common.c  common.h  media.c  media.h  mthread.c  mthread.h  rtsp_client_handle.c  rtsp_client_handle.h  rtsp_message.c  rtsp_message.h  rtsp_server_handle.c  rtsp_server_handle.h  session.c  session.h  socket_io.c  socket_io.h
src/io_event/: io_epoll.c  io_epoll.h  io_event.h  io_select.c
src/rtp/: aac_rtp.c  h264_rtp.c  h265_rtp.c  pcma_rtp.c  pcma_rtp.h  rtp.h
